# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/security/permission/permission.gni")
import("//build/ohos.gni")
import("//build/test.gni")

config("system_test_ability_util_config") {
  include_dirs = [
    "//base/security/permission/test/systemtest/common/distributedpermission/tool/include",
    "//foundation/distributedschedule/safwk/services/safwk/include",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("dpms_system_test_ability_util_lib") {
  sources = [
    "//base/security/permission/test/systemtest/common/distributedpermission/tool/src/event.cpp",
    "//base/security/permission/test/systemtest/common/distributedpermission/tool/src/module_test_dump_util.cpp",
    "//base/security/permission/test/systemtest/common/distributedpermission/tool/src/stoperator.cpp",
    "//base/security/permission/test/systemtest/common/distributedpermission/tool/src/system_test_ability_util.cpp",
    "//base/security/permission/test/systemtest/common/distributedpermission/tool/src/system_test_distributed_permission_util.cpp",
  ]

  configs = [
    ":system_test_ability_util_config",
    "//foundation/aafwk/standard/services/abilitymgr:abilityms_config",
    "//foundation/aafwk/standard/services/test/moduletest/module_test_dump_util:module_test_dump_util_config",
    "//foundation/appexecfwk/standard/services/appmgr:appmgr_config",
  ]

  deps = [
    "${distributed_permission_frameworks_log_path}:permission_standard_infrastructure_cxx",
    "${foundation_services_path}/test/moduletest/utils:tool_common",
    "${permission_path}/frameworks/permission_standard/permissioncommunicationadapter:permission_standard_communication_adapter_cxx",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/aafwk/standard/services/abilitymgr:abilityms",
    "//foundation/aafwk/standard/services/test/moduletest/module_test_dump_util:module_test_dump_util_lib",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedhardware/devicemanager/interfaces/inner_kits/native_cpp:devicemanagersdk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ces_standard:cesfwk_core",
    "ces_standard:cesfwk_innerkits",
    "device_manager_base:devicemanagersdk",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "security"
  part_name = "permission_standard"
}

group("system_test_ability_util") {
  deps = [ ":dpms_system_test_ability_util_lib" ]
}
